--- a/about.html
+++ b/about.html
@@ -304,6 +304,7 @@ nav .navbar a{
 	  <img src="https://avatars.githubusercontent.com/u/17055146?s=400&u=20492a5443668732e27c93dc6fbb8d6aec36c76a&v=4" alt="About" width="122" height="122"/>
 	  <p>I am Farid Rid (Revolution2032), the developer of the Darham (XDH) crypto token and also the Kubulus Meme under the Chimera Project. The project that was produced is still in the experimental stage with a specific purpose.</p>
       <p>For the improvement planning of the project is still in progress and will be updated from time to time.</p>
+		<h4 class="text">“Stay hungry, Stay foolish” - Steve Jobs</h4>
 	  </center>
   </section>
   
