--- a/darhamwp.html
+++ b/darhamwp.html
@@ -318,6 +318,21 @@ nav .navbar a{
 	  <p>Decimals: 6</p>
 	  <p>Contract Address:</p>
 	  <p>DD9YiDu98BXeuyMnNPYQufXPzxA5dGYh64Ypc8NqrwBD</p>
+
+         <h4>Roadmap</h4>
+	  
+	  <p>Phase 1: Q1 2025 (Launch & Community Growth</p>
+
+          <p>- Token launch on Solana (February, 21, 2025)</p>
+	  <p>- Community building on Twitter and Telegram</p>
+	  <P>- Pre-sale launched until March 22, 2025</p>
+	  <p>- Listing on decentralized exchanges (DEXs), March 24, 2025</p>
+	  
+	  <p>Phase 2: Q2 2025 (Trading & Real world usage)</p>
+	  
+	  <p>- Trading via Solana Wallet like Solflare or Phantom will be available</p>
+	  <p>- Partnership with small business community</p>
+	  <p>- Token vector image will be available for community promotion</p>
 	  
 	  <h4>Use Cases</h4>
 
