--- a/kubuluswp.html
+++ b/kubuluswp.html
@@ -331,7 +331,21 @@ nav .navbar a{
 	  
 	  <p>DEX Listings: KUBULUS will be tradable on decentralized exchanges.</p>
 	  <p>CEX Listings: Future partnerships will bring KUBULUS to centralized exchanges.</p>
+
+          <h4>Roadmap</h4>
 	  
+	  <p>Phase 1: Q1 2025 (Launch & Community Growth</p>
+
+      <p>- Token launch on Solana (February, 21, 2025)</p>
+	  <p>- Community building on Twitter and Telegram</p>
+	  <p>- Listing on decentralized exchanges (DEXs)</p>
+	  
+	  <p>Phase 2: Q2 2025 (Trading & Holding)</p>
+	  
+	  <p>- Trading via Solana Wallet like Solflare or Phantom will be available</p>
+	  <p>- Buying more for HODL to increase value</p>
+	  <p>- Token vector image will be available for community promotion</p>
+		  
 	  <h4>Security & Compliance</h4>
 	  
 	  <p>KUBULUS prioritizes transparency and security, ensuring a fair and decentralized ecosystem.</p>
