--- a/darhamwp.html
+++ b/darhamwp.html
@@ -364,7 +364,7 @@ nav .navbar a{
 	  <p></p>
 	  
 	  <p>X (Twitter): <a href="https://x.com/darhamxdh">Darham</a></p>
-	  <p>General Information: <a href="https://darhamxdhpg">Revoked</a></p> 
+	  <p>General Information: <a href="https://bit.ly/darhamxdhpg">Revoked</a></p> 
 	  <p>Telegram Channel: <a href="https://t.me/xdhdarham">Darham (XDH) Official</a></p>
 	  <p>Telegram Group: <a href="https://t.me/darhamxdh">Darham (XDH) Global</a></p>
   </center>
