--- a/kubuluswp.html
+++ b/kubuluswp.html
@@ -364,7 +364,7 @@ nav .navbar a{
 	  <p></p>
 	  
 	  <p>X (Twitter): <a href="https://x.com/KubulusMeme">Kubulus</a></p>
-	  <p>General Information: <a href="">Revoked</a></p>
+	  <p>General Information: <a href="https://bit.ly/kubulus">Revoked</a></p>
 	  <p>Telegram Group: <a href="https://t.me/kubulusmeme">KUBULUS</a></p>
 	  </center>
   </section>
