--- a/kubuluswp.html
+++ b/kubuluswp.html
@@ -303,7 +303,7 @@ nav .navbar a{
 	  <center>
       <h3 class="text">Kubulus (KUBULUS) <span>Whitepaper</span></h3>
 	  <img src="https://pbs.twimg.com/profile_images/1892755574141644800/OK6dNCst.jpg" alt="Kubulus" width="122" height="122"/>
-	  <p>Updated on: March 01, 2025</p>
+	  <p>Updated on: March 02, 2025</p>
 	  
       <h4>ABSTRACT</h4>
 	  
@@ -324,6 +324,11 @@ nav .navbar a{
 	  <p>Decimals: 6</p>
 	  <p>Contract Address:</p>
 	  <p>F7udLfo3SarwpqS5Efy4gFkhXziCJGAUqYQTWT5ho9c6</p>
+
+	  <h4>Liquidity Pool Increase Launched</h4>
+	  
+	  <p>Date: May, 03, 2025</p>
+	  <p>Supply: 3,875,250</p>
 	  
 	  <h4>Use Cases</h4>
 	  
